# ChangeLog for x11-misc/trayer-srg
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*trayer-srg-1.1.3 (10 Aug 2011)

  10 Aug 2011; Michael Weber <xmw@gentoo.org> -trayer-srg-1.1.2.ebuild,
  -files/trayer-srg-1.1.2-as-needed.patch,
  -files/trayer-srg-1.1.2-cflags.patch,
  -files/trayer-srg-1.1.2-panel_height.patch, +trayer-srg-1.1.3.ebuild,
  trayer-srg-9999.ebuild:
  Version bump, patches gone upstream, thanks Daniel (sargon).

  09 Aug 2011; Michael Weber <xmw@gentoo.org> trayer-srg-1.1.2.ebuild,
  +files/trayer-srg-1.1.2-as-needed.patch,
  +files/trayer-srg-1.1.2-cflags.patch,
  +files/trayer-srg-1.1.2-panel_height.patch, trayer-srg-9999.ebuild:
  Added some patches

*trayer-srg-9999 (09 Aug 2011)
*trayer-srg-1.1.2 (09 Aug 2011)

  09 Aug 2011; Michael Weber <xmw@gentoo.org> +trayer-srg-1.1.2.ebuild,
  +trayer-srg-9999.ebuild, +metadata.xml:
  Initial import
