@@ -1,15 +1,13 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST trayer-srg-1.1.3.tar.gz 24671 RMD160 d6883a4aee4d3d87e5ef62a3dc47d42f64f38a26 SHA1 e4ee8578565dff6b30551b838daa3e9032de30ed SHA256 03be5ea47278ecdb6ffb1d3b5115a855a6eccd6aa6702b84e89ee047ddd76558
-EBUILD trayer-srg-1.1.3.ebuild 771 RMD160 aca7dba6eb595f8fc91e6c6e49c4581a0a8245a6 SHA1 7f4c4a109fb81cc37cf7a2e6059359a1a4d6ff4f SHA256 10a014315cdee6dad4907bd773aa740e982a26aff7d4004199362416cf1d9d98
 EBUILD trayer-srg-9999.ebuild 697 RMD160 eeaec21878f142ad198854c4785ee8613204670b SHA1 7e0a76d82fd4d868b9b04d774b6cdd633625616a SHA256 b08178da2d3b232e6cc18fb020bc182861b24393a494223c893b946a8981144c
-MISC ChangeLog 912 RMD160 297fcd6723f53bc37fe729e2de463447adfde13c SHA1 ccbf16bf48c0edbe0df8a2ca1ba249b1a1949778 SHA256 32ac6df5a81389f5b321e8626e60c4bd5bcc1ca47fa95d24f5485fbf805af891
+MISC ChangeLog 1028 RMD160 3fb46924edd7d2c8b370f240749ba6a740829258 SHA1 8c75dd55d35842012e0e1b11c0fc9a4a58367c54 SHA256 26289a3f97dc49ffc165ed60064b3336d25fbdaa6072accbc05d7869cbdb794c
 MISC metadata.xml 245 RMD160 6b03982a4d5f32d9fa6b9259ae36f9fcb07c8404 SHA1 fb16c7b4c5ab071dd979f761b8bb075f5396b737 SHA256 375a1da02cd2c393ce2378a73c1ce08134bc030b3bb378c6a4d6ca9cd5be1f8d
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iF4EAREIAAYFAk5B0ysACgkQknrdDGLu8JBVHAD8Cagw2IYsblthJlIzk19VT3XK
-C9Rv8oJkdLzqFiNM5G0BAIPDCSPgCU5A1wW7gDOVu4t4hrZ8L8jDWMS3K1frmW6y
-=rq6d
+iF4EAREIAAYFAk85GHoACgkQknrdDGLu8JD1VgD/eAL3+H/pQ6UswPG5uBhKeOIl
+cMD4VbD+oimDh/+ayToA/i4fTnlF/f4G+ww329L8Ia5Fvm87P4PUgwTdGOgccBIw
+=7l32
 -----END PGP SIGNATURE-----
