@@ -1,6 +1,9 @@
 # ChangeLog for x11-misc/trayer-srg
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  13 Feb 2012; Michael Weber <xmw@gentoo.org> -trayer-srg-1.1.3.ebuild:
+  remove old version (superseeded by tree)
 
 *trayer-srg-1.1.3 (10 Aug 2011)
 
